Introduce display-variables job in DockerHub workflow
Add display-variables job to workflow

--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -6,6 +6,11 @@ on:
   workflow_dispatch:      # Ermöglicht manuelles Starten über die GitHub-Oberfläche
 
 jobs:
+  display-variables:
+    name: ${{ vars.SYSLANG }}
+    # You can use configuration variables with the `vars` context for dynamic jobs
+
+jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
