--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -40,4 +40,5 @@ jobs:
           labels: |
             org.opencontainers.image.title=dn-lxqt-xrdp
             org.opencontainers.image.source=https://github.com/dneuhaus76/dn-lxqt-xrdp
-            org.opencontainers.image.description=LXQt Desktop VDI mit XRDP
+            org.opencontainers.image.description=Debian LXQt Desktop VDI mit xfwm4 und xrdp
+            org.opencontainers.image.version=1.0
